2004-10-06  Hideyuki SHIRAI  <shirai@meadowy.org>

	* migemo.el.in (migemo-isearch-toggle-migemo): Refresh
	lazy-highlight.
	- Thanks to Masayuki FUJII's for the suggestion.

2004-08-02  Satoru Takabayashi  <satoru@namazu.org>

	* ChangeLog: Obfuscate email addresses to prevent spams.

2004-06-13  Satoru Takabayashi  <satoru@namazu.org>

	* migemo (segment): Refine the pattern.

	* migemo.el.in (migemo-replace-in-string): Simplified for performance.
	(migemo-get-pattern): Adopt the change of migemo-replace-in-string.
	(migemo-if): Removed.

	* configure.in: Bumped version number to 0.41.

2004-06-10  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* migemo.el.in (isearch-highlightify-region): Check
	`migemo-isearch-enable-p'.

2004-02-10  Satoru Takabayashi  <satoru@namazu.org>

	* acinclude.m4 (AM_PATH_RUBYDIR): Use Config::CONFIG["sitelibdir"]
	instead of Config::CONFIG["sitedir"].

2004-02-08  Hideyuki SHIRAI  <shirai@meadowy.org>

	* migemo.el.in (migemo-poor-emacs): Remove variable.
	(migemo-replace-in-string): Remove debug routine.
	(migemo-get-pattern, migemo-frequent-pattern-make): Associated
	value of `migemo-frequent-pattern-alist' and
	`migemo-pattern-alist' has a pattern include `^G'.
	
2003-09-26  Hideyuki SHIRAI  <shirai@meadowy.org>

	* migemo.el.in (migemo-emacs21p): Fix a careless mistake.
	(migemo-if): New macro.
	(migemo-poor-emacs): New variable for Debug.
	(migemo-replace-in-string): New function.
	(replace-regexp-in-string): Remove this definition.
	(migemo-get-pattern): Use `migemo-replace-in-string'. Bind
	`deactivate-mark' for Emacs21.4.
	(migemo-backward): Fix again for `looking-at'.
	(isearch-mode-map): Change key-binding for
	`migemo-isearch-toggle-migemo'.
	
2003-05-30  Hideyuki SHIRAI  <shirai@meadowy.org>

	* migemo.el.in (migemo-get-pattern): Delete unused variable.
	Execute `white-space-regexp' in original buffer.

2003-05-29  Hideyuki SHIRAI  <shirai@meadowy.org>

	* migemo.el (TOP): Change file local variable format.