@@ -1,3 +1,11 @@
+2004-10-12  Hideyuki SHIRAI  <shirai@meadowy.org>
+
+	* migemo.el.in (migemo-accept-process-output-timeout-msec): New
+	variable.
+	(migemo-get-pattern): Use
+	`migemo-accept-process-output-timeout-msec'.
+	- Thanks to URA Takefumi's for the suggestion.
+
 2004-10-06  Hideyuki SHIRAI  <shirai@meadowy.org>
 
 	* migemo.el.in (migemo-isearch-toggle-migemo): Refresh
